<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="10dp"
    android:layout_marginTop="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginBottom="10dp">

    <LinearLayout android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:fontFamily="serif"
            android:gravity="center"
            android:text="@string/ndaftar"
            android:textSize="15pt"
            android:textStyle="bold" />
        <View android:background="#220e0e"
            android:layout_width="match_parent"
            android:layout_height="4dp"
            android:layout_marginBottom="15dp"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/ednamaerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/ednama"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:hint="@string/enama"
                android:inputType="text"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/alamaterror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <EditText
                android:id="@+id/edalamat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:hint="@string/ealamt"
                android:inputType="textImeMultiLine"
                android:maxLines="3"
                android:singleLine="false" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="monospace"
                android:text="@string/ekelamin" />
            <RadioGroup
                android:orientation="horizontal"
                android:id="@+id/rgJenisKelamin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/rbLaki"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="monospace"
                    android:text="Laki - Laki" />

                <RadioButton
                    android:id="@+id/rbPerempuan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:fontFamily="monospace"
                    android:text="Perempuan" />
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:fontFamily="monospace"
                android:text="@string/eagama" />

            <RadioGroup
                android:id="@+id/rgagama1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbIslam"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Islam" />

                <RadioButton
                    android:id="@+id/rbKatolik"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Katolik" />

                <RadioButton
                    android:id="@+id/rbKristen"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Kristen" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rgAgama2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbHindu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Hindu" />

                <RadioButton
                    android:id="@+id/rbBudha"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Budha" />

                <RadioButton
                    android:id="@+id/rbKonghucu"
                    android:layout_width="wrap_content"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="monospace"
                    android:text="Konghucu" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/rgAgama3"
                android:layout_width="124dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rbKepercayaan"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="0.3"
                    android:fontFamily="serif"
                    android:text="Penganut Kepercayaan" />
            </RadioGroup>
        </LinearLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailerror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp">

            <EditText
                android:id="@+id/edeemail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:hint="@string/eemail"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passeror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:hint="@string/epass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repasseror"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            app:passwordToggleEnabled="true">

            <EditText
                android:id="@+id/edepass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="monospace"
                android:hint="@string/erepass"
                android:inputType="textPassword"
                android:maxLines="1"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btBatal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.4"
                android:fontFamily="serif"
                android:text="Batal"
                app:cornerRadius="30dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btDaftar"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="0.4"
                android:fontFamily="serif"
                android:text="Daftar"
                app:cornerRadius="30dp" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
